# SystemAudioSpectrum

./: CMakeLists.txt  CMakeUserPresets.json  README.md  SystemAudioSpectrum.cpp  SystemAudioSpectrum.h  SystemAudioSpectrum.ui  main.cpp
src/: AudioCapture.cpp  AudioCapture.h  FFTProcessor.cpp  FFTProcessor.h  Renderer.cpp  Renderer.h  RingBuffer.cpp  RingBuffer.h
